fix button spacing

--- a/test/dummy/app/assets/stylesheets/modules/mailer/_buttons.sass
+++ b/test/dummy/app/assets/stylesheets/modules/mailer/_buttons.sass
@@ -20,4 +20,7 @@ $dummy-mailer-styles: false !default
     line-height: 40px
 
   .folio-redactor-button
-    margin: 20px 0 20px 0
+    margin: 8px 0 8px 0 !important
+
+  p + .folio-redactor-button
+    margin-top: 20px !important
